--- a/style/index.css
+++ b/style/index.css
@@ -9,7 +9,7 @@
 
 body {
     background-color: darkgrey;
-    font-family: Courier;
+    font-family: 'Courier New';
 }
 
 .centered {
@@ -20,5 +20,6 @@ body {
 
 #blurb {
     margin-top: 2%;
+    text-align: left;
     width: 50%;
 }
