got it working, looks good, just need to add the rest

--- a/style/index.css
+++ b/style/index.css
@@ -12,9 +12,26 @@ body {
     font-family: 'Courier New';
 }
 
+iframe {
+    width: 100%;
+}
+
 .centered {
     margin: auto;
     margin-top: 1%;
+    text-align: center;
+}
+
+.image-block {
+    width: 20%;
+    padding: 3%;
+    float: left;
+}
+
+.selector-row {
+    width: 100%;
+    margin-left: 10%;
+    margin-right: 5%;
     text-align: center;
 }
 
