--- a/style/viewer.css
+++ b/style/viewer.css
@@ -16,16 +16,29 @@ body {
     text-align: center;
 }
 
-#options {
-    margin-left: 1%;
-}
-
 #viewer {
     height: 90%;
     width: 100%;
     border: 1px solid black;
+    z-index: 1;
+}
+
+#options {
+    width: 30%;
+    height: 80%;
+    position: absolute;
+    left: 70%;
+    top: 0%;
+    margin-top: 1%;
+    z-index: 2;
+    border: 1px solid black;
+    background-color: lightgray;
+    text-align: left;
+    padding-left: 1%;
+    padding-top: 1%;
 }
 
 #buttons {
     margin-top: 1%;
+    z-index: 2;
 }
