--- a/style/viewer.css
+++ b/style/viewer.css
@@ -42,3 +42,16 @@ body {
     margin-top: 1%;
     z-index: 2;
 }
+
+#info-box {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  padding: 10px;
+  background-color: transparent;
+  font-size: 14px;
+  font-family: Arial, sans-serif;
+  z-index: 9999;
+  font-weight: bold;
+  color: white;
+}
