--- a/style/viewer.css
+++ b/style/viewer.css
@@ -24,15 +24,15 @@ body {
 }
 
 #options {
-    width: 30%;
+    width: 25%;
     height: 80%;
     position: absolute;
-    left: 70%;
+    left: 75%;
     top: 0%;
     margin-top: 1%;
     z-index: 2;
     border: 1px solid black;
-    background-color: lightgray;
+    background: rgba(211, 211, 211, 0.5);
     text-align: left;
     padding-left: 1%;
     padding-top: 1%;
