--- a/style/viewer.css
+++ b/style/viewer.css
@@ -55,3 +55,17 @@ body {
   font-weight: bold;
   color: white;
 }
+
+#info {
+				position: fixed;
+				z-index: 1000;
+				bottom: 0;
+                left: 0;
+                padding: 10px;
+				background-color: rgba(0, 0, 0, 0.7);
+				min-height: 5vh;
+				width: 8vw;
+				color: white;
+				font-family: sans-serif;
+				font-size: 0.9em;
+			}
