--- a/style/viewer.css
+++ b/style/viewer.css
@@ -1,7 +1,7 @@
 /*
  * viewer.css
  * Styling for the viewer page
- * By Nicholas Verrochi
+ * By Nicholas Verrochi and Vidhya Sree N
  * For CS410 - The Axolotl Project
  */
 
@@ -43,29 +43,78 @@ body {
     z-index: 2;
 }
 
-#info-box {
-  position: fixed;
+#info {
+  position: absolute;
+  z-index: 1000;
   bottom: 0;
   left: 0;
   padding: 10px;
-  background-color: transparent;
-  font-size: 14px;
-  font-family: Arial, sans-serif;
-  z-index: 9999;
-  font-weight: bold;
+  background-color: rgba(0, 0, 0, 0.7);
+  min-height: 5vh;
+  width: 8vw;
   color: white;
+  font-family: sans-serif;
+  font-size: 0.9em;
 }
 
-#info {
-				position: fixed;
-				z-index: 1000;
-				bottom: 0;
-                left: 0;
-                padding: 10px;
-				background-color: rgba(0, 0, 0, 0.7);
-				min-height: 5vh;
-				width: 8vw;
-				color: white;
-				font-family: sans-serif;
-				font-size: 0.9em;
-			}
+/* Menu icon styles */
+.menu-icon {
+  position: absolute;
+  color:white;
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 3px;
+  top: 20px;
+  right: 0px;
+  width: 15px;
+  height: 25px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  z-index: 1; /* set z-index to a value higher than the black background */
+}
+
+.dot {
+  width: 40%;
+  height: 3px;
+  background-color: white;
+  border-radius: 5px;
+}
+
+/* Menu styles */
+.menu {
+  position: absolute;
+  top: 50px;
+  right: 0px;
+  background-color: rgba(0, 0, 0, 0.7);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  color:white;
+  padding: 10px;
+  display: none;
+  z-index: 2; /* set z-index to a value higher than the menu icon */
+}
+
+.menu ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.menu li {
+  margin-bottom: 10px;
+}
+
+.menu a {
+  color: white;
+  text-decoration: none;
+}
+
+/* Show menu upon clicking menu icon */
+.menu-icon:focus + .menu {
+  display: block;
+}
+
+.menu-open {
+      display: block;
+    }
+
