--- a/style/viewer.css
+++ b/style/viewer.css
@@ -24,35 +24,15 @@ body {
   position: relative;
 }
 
-#options {
-    width: 25%;
-    height: 80%;
-    position: absolute;
-    left: 75%;
-    top: 0%;
-    margin-top: 1%;
-    z-index: 2;
-    border: 1px solid black;
-    background: rgba(211, 211, 211, 0.5);
-    text-align: left;
-    padding-left: 1%;
-    padding-top: 1%;
-}
-
-#buttons {
-  margin-top: 1%;
-  z-index: 2;
-}
-
-#shortcuts, #info {
+#shortcuts {
   position: absolute;
   z-index: 1000;
   bottom: 0;
   left: 0;
-  padding: 10px;
+  padding: 1%;
   background-color: rgba(0, 0, 0, 0.7);
-  min-height: 5vh;
-  width: 8vw;
+  min-height: 5%;
+  width: 8%;
   color: white;
   font-family: sans-serif;
   font-size: 0.9em;
@@ -65,15 +45,15 @@ body {
 }
 
 /* Menu icon styles */
-.menu-icon {
+#menu-icon {
   position: absolute;
   color: white;
   background-color: rgba(0, 0, 0, 0.7);
-  padding: 3px;
-  top: 0px;
-  right: 0px;
-  width: 15px;
-  height: 25px;
+  padding: 1%;
+  top: 1%;
+  right: 0%;
+  width: 1%;
+  height: 3%;
   cursor: pointer;
   display: flex;
   flex-direction: column;
@@ -83,14 +63,14 @@ body {
 }
 
 .dot {
-  width: 40%;
+  width: 30%;
   height: 3px;
   background-color: white;
   border-radius: 5px;
 }
 
 /* Menu styles */
-.menu {
+#menu {
   position: absolute;
   top: 30px;
   right: 0px;
@@ -103,26 +83,13 @@ body {
   /* set z-index to a value higher than the menu icon */
 }
 
-.menu ul {
+ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-.menu li {
-  margin-bottom: 10px;
-}
-
-.menu a {
-  color: white;
-  text-decoration: none;
-}
-
 /* Show menu upon clicking menu icon */
-.menu-icon:focus+.menu {
-  display: block;
-}
-
-.menu-open {
+#menu-icon:focus+#menu {
   display: block;
 }
