--- a/style/viewer.css
+++ b/style/viewer.css
@@ -8,7 +8,8 @@
 body {
   overflow: hidden !important;
   background-color: black;
-  font-family: 'Courier New';
+  font-family: 'sans-serif';
+  font-size: 0.9em;
 }
 
 .centered {
@@ -70,10 +71,10 @@ body {
 }
 
 /* Menu styles */
-#menu {
+#measurement-menu {
   position: absolute;
-  top: 30px;
-  right: 0px;
+  top: 10%;
+  right: 0%;
   background-color: rgba(0, 0, 0, 0.7);
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   color: white;
@@ -90,6 +91,6 @@ ul {
 }
 
 /* Show menu upon clicking menu icon */
-#menu-icon:focus+#menu {
+#menu-icon:focus+#measurement-menu {
   display: block;
 }
