works after loading measurements at start - have to fix the event catching

--- a/style/viewer.css
+++ b/style/viewer.css
@@ -73,6 +73,7 @@ body {
 /* Menu styles */
 #measurement-menu {
   position: absolute;
+  text-align: left;
   top: 10%;
   right: 0%;
   background-color: rgba(0, 0, 0, 0.7);
