--- a/style/viewer.css
+++ b/style/viewer.css
@@ -81,6 +81,8 @@ body {
   color: white;
   padding: 10px;
   z-index: 2;
+  min-height: 5%;
+  min-width: 11%;
   /* set z-index to a value higher than the menu icon */
 }
 
@@ -88,4 +90,27 @@ ul {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+#short {
+    position: absolute;
+      z-index: 1000;
+      bottom: 0;
+      right: 20;
+      padding: 1%;
+      background-color: rgba(0, 0, 0, 0.2);
+      color: white;
+      font-family: sans-serif;
+      font-size: 0.9em;
+}
+#measurement-details{
+    position: absolute;
+      z-index: 1000;
+      top:150;
+      right:198;
+      padding: 1%;
+      background-color: rgba(0, 0, 0, 0.7);
+      color: white;
+      font-family: sans-serif;
+      font-size: 0.9em;
 }
