--- a/style/index.css
+++ b/style/index.css
@@ -3,7 +3,7 @@
 
     CSS styling for the index page.
 
-    By Nicholas Verrochi
+    By Nicholas Verrochi and Vidhya Sree N
     For CS410 - The Axolotl Project
 */
 
