--- a/style/preview-viewer.css
+++ b/style/preview-viewer.css
@@ -4,7 +4,7 @@
     Stylesheet for the smaller OpenSeadragon viewer
     used on the index page for previewing images
 
-    By Nicholas Verrochi
+    By Nicholas Verrochi and Vidhya Sree N
 
     For CS410 - The Axolotl Project
 */
